<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="about">About</string>
	<string name="aboutText"></string>
    <string name="app_name">MSLogger</string>
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="Preferences">Preferences</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
	<string name="disconnected">Disconnected</string>
	<string name="cannot_connect">Cannot connect to Megasquirt.</string>
	<string name="interrupted">Initialisation interrupted</string>
	<string name="AppSettings">AppSettings</string>
	<string name="megasquirt">Megasquirt</string>
	<string name="hertz">Hertz</string>
	<string name="quit">Quit</string>
	<string name="disconnecting_from_ms">Disconnecting from MS...</string>
	<string name="connecting_to_ms">Connecting to MS...</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="ms_model">MS Model</string>
	<string name="map_sensor">MAP Sensor</string>
	<string name="ego_sensor">EGO Sensor</string>
	<string name="temp_unit">Temp. Unit</string>
	<string name="data_log_directory">Data Log Directory</string>
	<string name="mslogger_is_running">MSLogger is running</string>
	<string name="logging_to">Logging to %s</string>
	<string name="CalibrateTPS">Calibrate TPS</string>
	<string name="ResetGauges">Reset Gauges</string>
	<string name="connect">Connect</string>
	<string name="disconnect">Disconnect</string>
	<string name="please_select">Please select your Bluetooth device in Preferences</string>
	<string name="EnableGaugeEdit">Enable Gauge Editing</string>
	<string name="DisableGaugeEdit">Disable Gauge Editing</string>
	<string name="autoconnect">Enable autoconnect</string>
	<string name="autoconnect_summary">Automatically manage the connection to the ECU</string>
	<string name="autolog">Enable autologging</string>
	<string name="autolog_summary">Automatically start logging whenever we have a connection to the ECU</string>

    <string name="autoemail_title">Auto Email Setup</string>
    <string name="autoemail_summary">Automatically emails the log file to an address of your choice</string>
    <string name="autoemail_autosend">Enable auto send</string>
    <string name="autoemail_autosend_summary">Enables sending the log file to an email address of your choosing.</string>
    <string name="autoemail_sendto">An email address</string>
    <string name="autoemail_target">Target email address</string>
    <string name="autoemail_target_summary">Where to email the log file</string>
    <string name="autoemail_smtp_category">Email Settings</string> 

    <string name="buy_button">Buy MSLogger</string>
    <string name="quit_button">Quit</string>
    <string name="cancel_buy_button">Not Yet</string>
    <string name="unlicensed_dialog_body">My car has a V8, a thirsy V8.  Please help me keep it sated by purchasing a licensed copy of MSLogger</string>
	<string name="unlicensed_dialog_title">Unlicensed Install Of MSLogger</string>
    <string name="trial_dialog_body">MSLogger has now successfully passed it tests.  If you wish to have the full logging capability, please buy the full version.</string>
	<string name="trial_dialog_title">MSLogger Tests Passed</string>
	        
    <string name="crash_toast_text">MSLogger has suffered an unexpected problem.  Submitting crash report.</string>
	        
    <string name="email_body">Logfiles generated by MSLogger.\n\n\nhttp://www.mslogger.co.uk</string>
	        
    <string name="email_subject">MSLogger files %tc</string>
	        
    <string name="about_text">An application to log information from Megasquirt ECUs.\n\nThanks to:\nPieter Corts\nMatthew Robson\nMartin Walton</string>
	        
    <string name="connection_check_completed">Connection check completed</string>
	        
    <string name="cannot_access_the_sd_card_no_logs_will_be_taken">Cannot access the SD card.  No logs will be taken.</string>
	        
    <string name="sd_card_error">SD Card Error</string>
    
    <string name="bt_ok">Ok</string>
    <string name="no_bt">BT not available.  The application will close.</string>
    <string name="title_paired_devices">Paired Devices</string>
	<string name="title_other_devices">Other Devices</string>
	<string name="button_scan">Scan</string>       
	<string name="none_paired">No paired devices</string>
	<string name="scanning">Scanning....</string>
	<string name="select_device">Select Device</string>
	<string name="none_found">None found</string>
	<string name="please_wait">Please Wait</string>
	<string name="identifying">Identifying your ECU</string>
	<string name="unrecognised_ecu">I don\'t recognise your ECU, would you like to email the developer about this?</string>
	<string name="workaround">Use alternate connection method</string>
</resources>
