<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/AppSettings">
		<EditTextPreference android:dialogTitle="@string/data_log_directory"
			android:defaultValue="@string/app_name" android:key="DataDir" android:title="Log Directory"></EditTextPreference>
		<ListPreference android:key="temptype" android:title="@string/temp_unit"
			android:entries="@array/tempent" android:entryValues="@array/tempvalues"
			android:defaultValue="CELSIUS"></ListPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/bluetooth">
		<uk.org.smithfamily.mslogger.widgets.BluetoothDevicePreference
			android:title="Bluetooth Device" android:key="bluetooth_mac"
			android:dialogTitle="Choose Bluetooth Device" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/megasquirt">
		<ListPreference android:entries="@array/MSNames"
			android:key="mstype" android:entryValues="@array/MSNames"
			android:defaultValue="MS1Extra" android:title="@string/ms_model"></ListPreference>
		<ListPreference android:key="maptype" android:entries="@array/mapnames"
			android:entryValues="@array/maptypes" android:title="@string/map_sensor"></ListPreference>
		<ListPreference android:key="egotype" android:entries="@array/egonames"
			android:entryValues="@array/egotypes" android:title="@string/ego_sensor"></ListPreference>
	</PreferenceCategory>

</PreferenceScreen>
